WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
295043
dNR: fix sub_frame resourceType allowAllRequests rules
https://bugs.webkit.org/show_bug.cgi?id=295043
Summary
dNR: fix sub_frame resourceType allowAllRequests rules
Elijah Sawyers
Reported
2025-06-26 11:19:06 PDT
rdar://154124673
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-06-27 17:36:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47328
EWS
Comment 2
2025-06-30 09:11:40 PDT
Committed
296799@main
(34e4b871322e): <
https://commits.webkit.org/296799@main
> Reviewed commits have been landed. Closing PR #47328 and removing active labels.
Elijah Sawyers
Comment 3
2025-07-21 11:34:36 PDT
The change was reverted, marking this as unresolved.
Elijah Sawyers
Comment 4
2025-07-21 14:11:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48344
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug